# training

./: README.md
1. Extra/: PJ1.py  PJ3.py  PJ4.py  PJ5.py
GTK + Glade/First Project/first_launch/: setup.cfg
HTML/: 1 - Project.html  10 - Basic Again.html  13 - Revision.html  14 - Revision CSS.html  16 - Revision CSS - Penguin.html  21 - CSS - Creating an element with several blocks.html  23 - CSS Training - Ball Moving.html  8 - Java getting value.html  Project 11.html  Project 12 - Test Colspan.html  Project 8 - Java getting value.html  Project 9 - Calculator.html
basic/: inheritance.py  lamba.py
css/: basicpositioning.css
deployments/: deployment.yaml
e-portfolio/: package-lock.json
exercises_extra/: PJ2.py
flask/: quickstart.py
google-maps/: package.json
gtk_glade_try/: main_window.py  user_interface.glade
html/: 11.html  12 - Test Colspan.html  15 - Revision CSS.html  17 - Revision CSS - Penguin Moving.html  18 - Revision CSS.html  19 - Color Gradient CSS.html  2 - Project.html  20 - Repeating Color Gradient CSS.html  22 - CSS - Animation - Changing 3 types of color.html  24 - First Website.html  25 - Second Website - Survey.html  26 - Basic on Positioning.html  3 - Project.html  4 - Project - Color Finder (RGB).html  4 - Project - Java.html  5 - Project - Java.html  6 - Project - Java.html  7 - Java.html  9 - Calculator.html  Project 10 - Basic Again.html  Project 13 - Revision.html  Project 14 - Revision CSS.html  Project 15 - Revision CSS.html  Project 16 - Revision CSS - Penguin.html  Project 17 - Revision CSS - Penguin Moving.html  (+4 more)
(+188 files in other folders)
