[metadata]

[egg_info]
;tag_build = .dev
;tag_date = true

[extract_messages]
mapping_file = first_launch.cfg
output_file = first_launch/locale/first_launch.pot
keywords = _ 

[update_catalog]
input_file = first_launch/locale/first_launch.pot
domain = first_launch
output_dir = first_launch/locale/

[compile_catalog]
domain = first_launch
directory = first_launch/locale/

[init_catalog]
input_file = first_launch/locale/first_launch.pot
domain = first_launch
output_dir = first_launch/locale/

